# Kaigai

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE-APACHE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/corpus/: jp-vtuber-corpus.json
docs/: README.md  development.md  dual-pass-accuracy-architecture.md  rc2-asr-mt-plan.md  release-quality-gates.md  translation-benchmark-findings.md  translation-benchmarks.md
docs/architecture/: accuracy-mode.md
docs/benchmarks/: README.md  findings.md
docs/maintainers/: release-checklist.md
scripts/: benchmark_text.py  compare-benchmark-reports.py  fine-tune-whisper.py  prepare-fleurs-corpus.py  prepare-vtuber-corpus.mjs  score-benchmark-report.py  translate-asr-llm.py  translate-asr-mt.py
scripts/tests/: test_benchmark_text.py
src/: app.css  app.html  lumi-flavour.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/KaigaiAppIcon.icon/: icon.json
src-tauri/benches/: translation_corpus.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: bench_corpus.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/resources/models/: README.md
src-tauri/src/: app.rs  benchmark.rs  commands.rs  download.rs  events.rs  lib.rs  main.rs  models.rs  settings.rs  state.rs  tracing_setup.rs
src-tauri/src/benchmark/: paths.rs  report.rs
src-tauri/src/commands/: mod.rs  model.rs  session.rs  tools.rs  window.rs
src-tauri/src/models/: coreml.rs  definitions.rs  install.rs  mod.rs
src-tauri/src/pipeline/: audio_window.rs  inference.rs  media.rs  mod.rs  quality.rs  queue.rs  stabilizer.rs  vad.rs  whisper.rs
src-tauri/src/tools/: mod.rs  ytdlp.rs
src/lib/: AdvancedTiming.svelte  AppHeader.svelte  DownloadProgress.svelte  InfoTip.svelte  StatusPill.svelte  async.test.ts  async.ts  format.test.ts  format.ts  lifecycle.ts  settings-options.ts  status.ts
src/lib/settings/: AccessSettings.svelte  AppearanceSettings.svelte  EngineSettings.svelte  ToolSettings.svelte
src/lib/setup/: ModelSetup.svelte  YtDlpSetup.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte  overlay.css
src/routes/developer/: +page.svelte  developer.css
src/routes/onboarding/: +page.svelte  onboarding.css
src/routes/settings/: +page.svelte  settings.css
src/types/: bindings.ts
