[package]
name = "kaigai"
version = "1.0.0-rc.1"
description = "Local Japanese livestream subtitles"
authors = ["LuMiSxh"]
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "kaigai"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Smaller, faster release binary. No lto: both "fat" and "thin" break the
# macOS link (missing ___isPlatformVersionAtLeast) against whisper-rs-sys's
# Objective-C/Metal glue — codegen-units/strip alone still help plenty.
[profile.release]
opt-level = 3
lto = false
codegen-units = 1
strip = true

# Desktop-only app (no gen/apple or gen/android), so the lib only needs to be
# linkable by our own bin/tests/benches — rlib is enough. staticlib/cdylib
# were unused mobile-template leftovers.
[lib]
name = "kaigai_lib"
crate-type = ["rlib"]

[build-dependencies]
sha2 = "0.10"
tauri-build = { version = "2", features = [] }
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "0.0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
futures-util = "0.3"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal", "coreml"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = "0.16"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "translation_corpus"
harness = false
